--- a/shap.ipynb
+++ b/shap.ipynb
@@ -12,6 +12,7 @@
     "from pygoridge.constants import PayloadType\n",
     "import csv\n",
     "from numpy import genfromtxt\n",
+    "import pandas as pd\n",
     "import shap\n",
     "my_data = genfromtxt('dataset_AI_Random_7.csv',delimiter=',', skip_header=1)\n",
     "\n",
@@ -39,10 +40,19 @@
     "        break\n",
     "\n",
     "#print(my_data)\n",
-    "print(go_ur_ai_numpy(my_data))\n",
+    "#print(go_ur_ai_numpy(my_data))\n",
     "\n",
-    "explainer = shap.KernelExplainer(go_ur_ai_numpy, my_data[:10], link=\"logit\")\n",
-    "shap_values = explainer.shap_values(my_data[:100], nsamples=100)"
+    "header = [f'{col}_pos_{i+2}' for i, col in enumerate(header)]\n",
+    "\n",
+    "my_data_df = pd.DataFrame(my_data)\n",
+    "my_data_df.columns = header\n",
+    "\n",
+    "n_samples = 500\n",
+    "bg_values = my_data_df.sample(10)\n",
+    "data_sample = my_data_df.sample(n_samples)\n",
+    "\n",
+    "explainer = shap.KernelExplainer(go_ur_ai_numpy, bg_values, link=\"logit\")\n",
+    "shap_values = explainer.shap_values(data_sample, nsamples=n_samples)"
    ]
   },
   {
@@ -52,9 +62,8 @@
    "outputs": [],
    "source": [
     "shap.initjs()\n",
-    "my_data_df = pd.DataFrame(my_data)\n",
-    "my_data_df.columns = header\n",
-    "shap.force_plot(explainer.expected_value, shap_values[1, :], my_data_df.iloc[1, :], link=\"logit\")\n"
+    "\n",
+    "shap.force_plot(explainer.expected_value, shap_values[1], data_sample.iloc[1], link=\"logit\")\n"
    ]
   },
   {
@@ -63,11 +72,84 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "s = pd.Series(pd.DataFrame(shap_values).abs().mean())\n",
-    "df = pd.DataFrame(s)\n",
-    "df.index = header\n",
-    "df.sort_values(0, ascending=False)"
+    "df_shap = pd.DataFrame(shap_values)\n",
+    "avg_abs_shap_values = pd.Series(df_shap.abs().mean())\n",
+    "var_shap_values = pd.Series(df_shap.var())\n",
+    "min_shap_values = pd.Series(df_shap.min())\n",
+    "max_shap_values = pd.Series(df_shap.max())\n",
+    "\n",
+    "shap_columns = pd.DataFrame({\n",
+    "    'Column': data_sample.columns, \n",
+    "    'Average Absolute Shap': avg_abs_shap_values, \n",
+    "    'Variance Shap': var_shap_values, \n",
+    "    'Min Shap': min_shap_values, \n",
+    "    'Max Shap': max_shap_values,\n",
+    "}).set_index('Column').sort_values('Average Absolute Shap', ascending=False)\n",
+    "shap_columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shap.decision_plot(explainer.expected_value, shap_values, data_sample, link='logit', feature_display_range=slice(None, -50, -1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = go_ur_ai_numpy(data_sample.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = pd.Series(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "good_scores_mask = y > 0.5\n",
+    "good_scores_mask.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_sample.reset_index(drop=True)[good_scores_mask]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shap.decision_plot(explainer.expected_value, shap_values[good_scores_mask], data_sample.reset_index(drop=True)[good_scores_mask], feature_display_range=slice(None, -100, -1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shap.decision_plot(explainer.expected_value, shap_values[good_scores_mask], data_sample.reset_index(drop=True)[good_scores_mask], feature_display_range=slice(None, -100, -1), link=\"logit\")"
    ]
   }
  ],
