some progress on shap and documenting it

--- a/notebooks/shap.ipynb
+++ b/notebooks/shap.ipynb
@@ -8,16 +8,19 @@
    "source": [
     "from pygoridge import RPC, SocketRelay\n",
     "import numpy as np\n",
-    "import json\n",
     "from pygoridge.constants import PayloadType\n",
-    "import csv\n",
-    "from numpy import genfromtxt\n",
     "import pandas as pd\n",
     "import shap\n",
-    "my_data = genfromtxt('dataset_AI_Random_7.csv',delimiter=',', skip_header=1)\n",
     "\n",
+    "# Run go run .\\cmd\\generate_dataset\\main.go at least one before running this notebook, so that \"dataset_AI_Random_7.csv\" exists!\n",
+    "real_game_dataset = pd.read_csv('dataset_AI_Random_7.csv')\n",
+    "\n",
+    "# Run go run .\\cmd\\inference-rpc-bridge\\main.go before running this notebook! \n",
     "rpc = RPC(SocketRelay(\"127.0.0.1\", 6001))\n",
     "\n",
+    "# Little \"hack\" so that numpy writes to memory instead of saving to disk.\n",
+    "# I did not find any way to get this format as a variable instead of a file on disk\n",
+    "# And I did not want to have the overhead of writing to disk\n",
     "class memfile:\n",
     "    def __init__(self):\n",
     "        self.b = []\n",
@@ -26,33 +29,28 @@
     "    def asbytes(self):\n",
     "        return bytes(self.b)\n",
     "\n",
-    "\n",
     "def go_ur_ai_numpy(x):\n",
     "    mm = memfile()\n",
     "    np.save(mm, x)\n",
     "    return np.array(json.loads(rpc(\"GoUr.InferNumpy\", mm.asbytes(), PayloadType.PAYLOAD_RAW)))\n",
     "\n",
-    "with open('dataset_AI_Random_7.csv', 'r') as f:\n",
-    "    csv_reader = csv.reader(f)\n",
-    "    header = []\n",
-    "    for row in csv_reader:\n",
-    "        header = row\n",
-    "        break\n",
-    "\n",
-    "#print(my_data)\n",
-    "#print(go_ur_ai_numpy(my_data))\n",
-    "\n",
-    "header = [f'{col}_pos_{i+2}' for i, col in enumerate(header)]\n",
-    "\n",
-    "my_data_df = pd.DataFrame(my_data)\n",
-    "my_data_df.columns = header\n",
+    "real_game_dataset.columns = [f'{col}_pos_{i+2}' for i, col in enumerate(real_game_dataset.columns)]\n",
     "\n",
     "n_samples = 500\n",
-    "bg_values = my_data_df.sample(10)\n",
-    "data_sample = my_data_df.sample(n_samples)\n",
+    "bg_values = real_game_dataset.sample(10)\n",
+    "data_sample = real_game_dataset.sample(n_samples)\n",
     "\n",
     "explainer = shap.KernelExplainer(go_ur_ai_numpy, bg_values, link=\"logit\")\n",
-    "shap_values = explainer.shap_values(data_sample, nsamples=n_samples)"
+    "shap_values = explainer.shap_values(data_sample, n_samples=n_samples)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Force plot\n",
+    "\n",
+    "This shows the shap force plot of a single dice throw"
    ]
   },
   {
@@ -62,8 +60,7 @@
    "outputs": [],
    "source": [
     "shap.initjs()\n",
-    "\n",
-    "shap.force_plot(explainer.expected_value, shap_values[1], data_sample.iloc[1], link=\"logit\")\n"
+    "shap.force_plot(explainer.expected_value, shap_values[1], data_sample.iloc[1], link=\"logit\")"
    ]
   },
   {
@@ -94,7 +91,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shap.decision_plot(explainer.expected_value, shap_values, data_sample, link='logit', feature_display_range=slice(None, -50, -1))"
+    "shap.decision_plot(explainer.expected_value, shap_values, data_sample, link='logit', feature_display_range=slice(None, -100, -1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis of strongly positive moves\n",
+    "\n",
+    "I don't think it works well. Should be adjusted because the mask does not seem to fit the dataframes"
    ]
   },
   {
@@ -131,7 +137,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_sample.reset_index(drop=True)[good_scores_mask]"
+    "good_scores = data_sample.reset_index(drop=True)[good_scores_mask]\n",
+    "good_scores"
    ]
   },
   {
@@ -140,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shap.decision_plot(explainer.expected_value, shap_values[good_scores_mask], data_sample.reset_index(drop=True)[good_scores_mask], feature_display_range=slice(None, -100, -1))"
+    "shap.decision_plot(explainer.expected_value, shap_values[good_scores_mask], good_scores, feature_display_range=slice(None, -100, -1))"
    ]
   },
   {
@@ -149,7 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shap.decision_plot(explainer.expected_value, shap_values[good_scores_mask], data_sample.reset_index(drop=True)[good_scores_mask], feature_display_range=slice(None, -100, -1), link=\"logit\")"
+    "shap.decision_plot(explainer.expected_value, shap_values[good_scores_mask], good_scores, feature_display_range=slice(None, -100, -1), link=\"logit\")"
    ]
   }
  ],
