--- a/notebooks/shap.ipynb
+++ b/notebooks/shap.ipynb
@@ -11,8 +11,9 @@
     "from pygoridge.constants import PayloadType\n",
     "import pandas as pd\n",
     "import shap\n",
+    "import json\n",
     "\n",
-    "# Run go run .\\cmd\\generate_dataset\\main.go at least one before running this notebook, so that \"dataset_AI_Random_7.csv\" exists!\n",
+    "# Run go run .\\cmd\\generate_dataset\\main.go at least once before running this notebook, so that \"dataset_AI_Random_7.csv\" exists!\n",
     "real_game_dataset = pd.read_csv('dataset_AI_Random_7.csv')\n",
     "\n",
     "# Run go run .\\cmd\\inference-rpc-bridge\\main.go before running this notebook! \n",
@@ -32,11 +33,18 @@
     "def go_ur_ai_numpy(x):\n",
     "    mm = memfile()\n",
     "    np.save(mm, x)\n",
-    "    return np.array(json.loads(rpc(\"GoUr.InferNumpy\", mm.asbytes(), PayloadType.PAYLOAD_RAW)))\n",
-    "\n",
+    "    return np.array(json.loads(rpc(\"GoUr.InferNumpy\", mm.asbytes(), PayloadType.PAYLOAD_RAW)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "real_game_dataset.columns = [f'{col}_pos_{i+2}' for i, col in enumerate(real_game_dataset.columns)]\n",
     "\n",
-    "n_samples = 500\n",
+    "n_samples = 100\n",
     "bg_values = real_game_dataset.sample(10)\n",
     "data_sample = real_game_dataset.sample(n_samples)\n",
     "\n",
@@ -60,7 +68,7 @@
    "outputs": [],
    "source": [
     "shap.initjs()\n",
-    "shap.force_plot(explainer.expected_value, shap_values[1], data_sample.iloc[1], link=\"logit\")"
+    "shap.force_plot(explainer.expected_value, shap_values[18], data_sample.iloc[18], link=\"logit\")"
    ]
   },
   {
@@ -76,10 +84,10 @@
     "max_shap_values = pd.Series(df_shap.max())\n",
     "\n",
     "shap_columns = pd.DataFrame({\n",
-    "    'Column': data_sample.columns, \n",
-    "    'Average Absolute Shap': avg_abs_shap_values, \n",
-    "    'Variance Shap': var_shap_values, \n",
-    "    'Min Shap': min_shap_values, \n",
+    "    'Column': data_sample.columns,\n",
+    "    'Average Absolute Shap': avg_abs_shap_values,\n",
+    "    'Variance Shap': var_shap_values,\n",
+    "    'Min Shap': min_shap_values,\n",
     "    'Max Shap': max_shap_values,\n",
     "}).set_index('Column').sort_values('Average Absolute Shap', ascending=False)\n",
     "shap_columns"
@@ -98,9 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analysis of strongly positive moves\n",
-    "\n",
-    "I don't think it works well. Should be adjusted because the mask does not seem to fit the dataframes"
+    "## Analysis of strongly positive moves"
    ]
   },
   {
@@ -127,7 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "good_scores_mask = y > 0.5\n",
+    "good_scores_mask = y > 0.1\n",
     "good_scores_mask.sum()"
    ]
   },
@@ -139,15 +145,6 @@
    "source": [
     "good_scores = data_sample.reset_index(drop=True)[good_scores_mask]\n",
     "good_scores"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "shap.decision_plot(explainer.expected_value, shap_values[good_scores_mask], good_scores, feature_display_range=slice(None, -100, -1))"
    ]
   },
   {
